Bug 259828 - Cannot configure colors for categories in the configure categories dialog.
Summary: Cannot configure colors for categories in the configure categories dialog.
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-14 12:33 UTC by Ludwig Reiter
Modified: 2011-01-18 12:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-12-14 12:33:24 UTC
Version:           unspecified (using Devel) 
OS:                Windows CE

version: Windows CE 2010-12-13 svn-1206065

Open korganizer mobile
Open configure categories dialog
=> No way to configure a color for a category

Reproducible: Always
Comment 1 Tobias Koenig 2010-12-14 14:22:53 UTC
Hej Ludwig,

you can configure the category color when assigning a category to an event/todo/contact. Is this acceptable?
Steps to reproduce:
 - open korganizer-mobile
 - click on 'New Appointment'
 - pull out 'More...' flap
 - click categories 'Select' button

Ciao,
Tobias
Comment 2 Ludwig Reiter 2011-01-10 15:38:31 UTC
test with 2011-01-03 git-fd19a2b

Clicking on the Select (German: Auswahl) button doesn't open a category config dialog. (The button gets blue and nothing happens)

So not fixed.
Comment 3 Tobias Koenig 2011-01-13 15:55:30 UTC
commit f0f41b94eb92bf983122eb20821c8ae8b4f0902f
branch master
Author: Tobias Koenig <tokoe@kde.org>
Date:   Thu Jan 13 15:57:35 2011 +0100

    Enable CategoryDialog on WinCE again
    
    We can use QTreeView on WinCE again, so do not ifdef out the
    category dialog.
    
    BUG: 259828

diff --git a/incidenceeditor-ng/incidencecategories.cpp b/incidenceeditor-ng/incidencecategories.cpp
index bc85ebc..5b543ce 100644
--- a/incidenceeditor-ng/incidencecategories.cpp
+++ b/incidenceeditor-ng/incidencecategories.cpp
@@ -21,9 +21,7 @@
 #include "incidencecategories.h"
 #include "categoryhierarchyreader.h"
 
-#ifndef Q_OS_WINCE
-  #include "categorydialog.h"
-#endif
+#include "categorydialog.h"
 
 #include "editorconfig.h"
 
@@ -105,8 +103,6 @@ bool IncidenceCategories::isDirty() const
 void IncidenceCategories::selectCategories()
 {
 #ifdef KDEPIM_MOBILE_UI
-// FIXME we don't have QTreeWidget on WinCE, find an alternative !
-#ifndef Q_OS_WINCE
   CategoryConfig cc( EditorConfig::instance()->config() );
   QPointer<CategoryDialog> dialog( new CategoryDialog( &cc ) );
   dialog->setSelected( mSelectedCategories );
@@ -115,7 +111,6 @@ void IncidenceCategories::selectCategories()
   setCategories( dialog->selectedCategories() );
   delete dialog;
 #endif
-#endif
 }
 
 void IncidenceCategories::setCategories( const QStringList &categories )
Comment 4 Ludwig Reiter 2011-01-18 12:41:37 UTC
test of the description
version 2011-01-16 git 4d1bc61

The first use of the category dialog need 10s. Slow.
The other uses are faster.

And it worked.
So closed.