Enable CategoryDialog on WinCE again

We can use QTreeView on WinCE again, so do not ifdef out the
category dialog.

BUG: 259828